Added the Netlify link

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
       </div>
     </div>
+    <a href="https://main--jazzy-semifreddo-ffbaec.netlify.app/"></a>
 	<script src="script.js">
 	</script>
 </body>
