Added the Github link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       </div>
     </div>
     <a href="https://main--jazzy-semifreddo-ffbaec.netlify.app/"></a>
-	<script src="script.js">
+	<a href="https://github.com/EmperorJho/Search-Engine"></a>
+    <script src="script.js">
 	</script>
 </body>
 
