Added the gitub link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
       </div>
     </div>
     <a href="https://main--jazzy-semifreddo-ffbaec.netlify.app/"></a>
-	<a href="https://github.com/EmperorJho/Search-Engine"></a>
+ <small>
+          <a
+            href="https://github.com/EmperorJho/Search-Engine"
+            target="blank"
+            >Open-source code</a
+          >
+          by Jovita Iwhride
+        </small>
     <script src="script.js">
 	</script>
 </body>
